--- a/mall-admin/src/main/resources/application-prod.yml
+++ b/mall-admin/src/main/resources/application-prod.yml
@@ -1,6 +1,8 @@
+host: 112.124.39.109
+
 spring:
   datasource:
-    url: jdbc:mysql://db:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://${host}:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: reader
     password: 123456
     druid:
@@ -13,7 +15,7 @@ spring:
         login-username: druid
         login-password: druid
   redis:
-    host: redis # Redis服务器地址
+    host: ${host} # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
