--- a/mall-portal/src/main/resources/application-prod.yml
+++ b/mall-portal/src/main/resources/application-prod.yml
@@ -1,9 +1,11 @@
 server:
   port: 8085
 
+host: 112.124.39.109
+
 spring:
   datasource:
-    url: jdbc:mysql://db:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://${host}:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: reader
     password: 123456
     druid:
@@ -18,19 +20,19 @@ spring:
 
   data:
     mongodb:
-      host: mongo
+      host: ${host}
       port: 27017
       database: mall-port
 
   redis:
-    host: redis # Redis服务器地址
+    host: ${host} # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
     timeout: 300ms # 连接超时时间（毫秒）
 
   rabbitmq:
-    host: rabbit
+    host: ${host}
     port: 5672
     virtual-host: /mall
     username: mall
