1. Add docker.sh for building and running container.\n2. Refine the s.yaml file.

--- a/s.yaml
+++ b/s.yaml
@@ -18,11 +18,12 @@ services:
         memorySize: 3072
         handler: not-used
         timeout: 60
-        #initializationTimeout: 60
-        #initializer: not-used
         runtime: custom-container
         customContainerConfig:
-          image: registry-vpc.cn-hangzhou.aliyuncs.com/quanxi-hryang/mall-admin:1.0-SNAPSHOT
+          image: registry.cn-hangzhou.aliyuncs.com/quanxi-hryang/mall-admin:1.0-SNAPSHOT
+          accelerationType: "Default"
+          args: ""
+          command: ""
       triggers:
         - name: httpTrigger
           type: http
@@ -55,8 +56,6 @@ services:
         memorySize: 3072
         handler: not-used
         timeout: 60
-        #initializationTimeout: 60
-        #initializer: not-used
         runtime: custom-container
         customContainerConfig:
           image: registry.cn-hangzhou.aliyuncs.com/quanxi-hryang/mall-portal:1.0-SNAPSHOT
@@ -78,7 +77,6 @@ services:
               methods:
                 - GET
                 - POST
-
   mall-search:
     component: devsapp/fc
     props:
@@ -93,11 +91,9 @@ services:
         memorySize: 3072
         handler: not-used
         timeout: 60
-        #initializationTimeout: 60
-        #initializer: not-used
         runtime: custom-container
         customContainerConfig:
-          image: registry-vpc.cn-hangzhou.aliyuncs.com/quanxi-hryang/mall-search:1.0-SNAPSHOT
+          image: registry.cn-hangzhou.aliyuncs.com/quanxi-hryang/mall-search:1.0-SNAPSHOT
       triggers:
         - name: httpTrigger
           type: http
@@ -116,5 +112,41 @@ services:
               methods:
                 - GET
                 - POST
+  mall-admin-web:
+    component: devsapp/fc
+    props:
+      region: ${vars.region}
+      service: # AlibabaCloud FunctionCompute Service
+        name: mall-admin-web
+        internetAccess: true
+      function: # AlibabaCloud FunctionCompute Function
+        name: mall-admin-web
+        description: The mall project based on SpringBoot+MyBatis. https://github.com/macrozheng/mall
+        caPort: 80
+        memorySize: 1536
+        handler: not-used # handler is invalid for custom container.
+        timeout: 60
+        runtime: custom-container
+        customContainerConfig:
+          image: registry.cn-hangzhou.aliyuncs.com/quanxi-hryang/mall-admin-web:1.0-SNAPSHOT
+      triggers:
+        - name: httpTrigger
+          type: http
+          config:
+            authType: anonymous
+            methods:
+              - GET
+              - POST
+      customDomains:
+        - domainName: auto
+          protocol: HTTP
+          routeConfigs:
+            - path: /*
+              serviceName: mall-admin-web
+              functionName: mall-admin-web
+              methods:
+                - GET
+                - POST
+
 
 # https://github.com/devsapp/fc
