Create logstore for FC services automatically.

--- a/s.yaml
+++ b/s.yaml
@@ -3,15 +3,22 @@ name: mall
 access: default
 vars:
   region: cn-hangzhou
+
+# Define the Serverless-Devs services. Each service is a FC function.
 services:
   mall-admin:
     component: devsapp/fc
     props:
       region: ${vars.region}
-      service: # AlibabaCloud FunctionCompute Service
+      # Define the AlibabaCloud FunctionCompute Service.
+      service: 
         name: mall-admin
         internetAccess: true
-      function: # # AlibabaCloud FunctionCompute Function
+        # Let the serverless-devs create a shared logstore automatically.
+        # All FC services share the same logstore.
+        logConfig: auto 
+      # Define the AlibabaCloud FunctionCompute Function.
+      function: 
         name: mall-admin
         description: The mall project based on SpringBoot+MyBatis. https://github.com/macrozheng/mall
         caPort: 8080
@@ -21,6 +28,7 @@ services:
         runtime: custom-container
         customContainerConfig:
           image: registry.${vars.region}.aliyuncs.com/quanxi-hryang/mall-admin:1.0-SNAPSHOT
+          # Enable the image acceleration.
           accelerationType: Default
       triggers:
         - name: httpTrigger
@@ -44,10 +52,15 @@ services:
     component: devsapp/fc
     props:
       region: ${vars.region}
-      service: # AlibabaCloud FunctionCompute Service
+      # Define the AlibabaCloud FunctionCompute Service.
+      service: 
         name: mall-portal
         internetAccess: true
-      function: # AlibabaCloud FunctionCompute Function
+        # Let the serverless-devs create a shared logstore automatically.
+        # All FC services share the same logstore.
+        logConfig: auto 
+      # Define the AlibabaCloud FunctionCompute Function.
+      function:
         name: mall-portal
         description: The mall project based on SpringBoot+MyBatis. https://github.com/macrozheng/mall
         caPort: 8085
@@ -57,6 +70,7 @@ services:
         runtime: custom-container
         customContainerConfig:
           image: registry.${vars.region}.aliyuncs.com/quanxi-hryang/mall-portal:1.0-SNAPSHOT
+          # Enable the image acceleration.
           accelerationType: Default
       triggers:
         - name: httpTrigger
@@ -80,10 +94,15 @@ services:
     component: devsapp/fc
     props:
       region: ${vars.region}
-      service: # AlibabaCloud FunctionCompute Service
+      # Define the AlibabaCloud FunctionCompute Service.
+      service:
         name: mall-search
         internetAccess: true
-      function: # AlibabaCloud FunctionCompute Function
+        # Let the serverless-devs create a shared logstore automatically.
+        # All FC services share the same logstore.
+        logConfig: auto 
+      # Define the AlibabaCloud FunctionCompute Function.
+      function:
         name: mall-search
         description: The mall project based on SpringBoot+MyBatis. https://github.com/macrozheng/mall
         caPort: 8081
@@ -93,6 +112,7 @@ services:
         runtime: custom-container
         customContainerConfig:
           image: registry.${vars.region}.aliyuncs.com/quanxi-hryang/mall-search:1.0-SNAPSHOT
+          # Enable the image acceleration.
           accelerationType: Default
       triggers:
         - name: httpTrigger
